@@ -1,7 +1,11 @@
+import org.apache.tools.ant.filters.ReplaceTokens
+
 plugins {
     kotlin("jvm")
     id("jps-compatible")
 }
+
+val kotlinVersion: String by rootProject.extra
 
 repositories {
     maven("https://jetbrains.bintray.com/markdown")
@@ -28,25 +32,6 @@ sourceSets {
             "idea-live-templates/tests"
         )
     }
-
-    "performanceTest" {
-        java.srcDirs("performanceTests")
-    }
-}
-
-val performanceTestCompile by configurations
-performanceTestCompile.apply {
-    extendsFrom(configurations["testCompile"])
-}
-
-val performanceTestCompileOnly by configurations
-performanceTestCompileOnly.apply {
-    extendsFrom(configurations["testCompileOnly"])
-}
-
-val performanceTestRuntime by configurations
-performanceTestRuntime.apply {
-    extendsFrom(configurations["testRuntime"])
 }
 
 dependencies {
@@ -79,9 +64,9 @@ dependencies {
     compile(project(":j2k"))
     compile(project(":idea:idea-j2k"))
     compile(project(":idea:formatter"))
-    compile(project(":idea:fir-view"))
     compile(project(":compiler:fir:fir2ir"))
     compile(project(":compiler:fir:resolve"))
+    compile(project(":compiler:fir:checkers"))
     compile(project(":compiler:fir:java"))
     compile(project(":compiler:fir:jvm"))
     compile(project(":idea:idea-core"))
@@ -107,6 +92,9 @@ dependencies {
 
     Platform[193].orHigher {
         implementation(commonDep("org.jetbrains.intellij.deps.completion", "completion-ranking-kotlin"))
+        Ide.IJ {
+            implementation(intellijPluginDep("stats-collector"))
+        }
     }
 
     compileOnly(commonDep("org.jetbrains", "markdown"))
@@ -117,6 +105,7 @@ dependencies {
     compileOnly(intellijPluginDep("java-i18n"))
     compileOnly(intellijPluginDep("gradle"))
 
+    testCompileOnly(toolsJar())
     testCompileOnly(project(":kotlin-reflect-api")) // TODO: fix import (workaround for jps build)
     testCompile(project(":kotlin-test:kotlin-test-junit"))
     testCompile(projectTests(":compiler:tests-common"))
@@ -129,9 +118,7 @@ dependencies {
     testCompile(commonDep("junit:junit"))
     testCompileOnly(intellijPluginDep("coverage"))
 
-    testRuntime(project(":kotlin-native:kotlin-native-library-reader")) { isTransitive = false }
-    testRuntime(project(":kotlin-native:kotlin-native-utils")) { isTransitive = false }
-
+    testRuntimeOnly(toolsJar())
     testRuntime(commonDep("org.jetbrains", "markdown"))
     testRuntime(project(":plugins:kapt3-idea")) { isTransitive = false }
     testRuntime(project(":kotlin-reflect"))
@@ -175,6 +162,10 @@ dependencies {
     if (Ide.IJ()) {
         testCompileOnly(intellijPluginDep("maven"))
         testRuntime(intellijPluginDep("maven"))
+
+        if (Ide.IJ201.orHigher()) {
+            testRuntime(intellijPluginDep("repository-search"))
+        }
     }
 
     testRuntime(intellijPluginDep("junit"))
@@ -191,16 +182,20 @@ dependencies {
         testRuntime(intellijPluginDep("google-cloud-tools-core-as"))
         testRuntime(intellijPluginDep("google-login-as"))
     }
-
-    performanceTestCompile(sourceSets["test"].output)
-    performanceTestCompile(sourceSets["main"].output)
-    performanceTestCompile(project(":nj2k"))
-    performanceTestCompile(project(":idea:idea-gradle-tooling-api"))
-    performanceTestCompile(intellijPluginDep("gradle"))
-    performanceTestRuntime(sourceSets["performanceTest"].output)
 }
 
 tasks.named<Copy>("processResources") {
+    val currentIde = IdeVersionConfigurator.currentIde
+    val pluginPatchNumber = findProperty("pluginPatchNumber") as String? ?: "1"
+    val defaultPluginVersion = "$kotlinVersion-${currentIde.displayVersion}-$pluginPatchNumber"
+    val pluginVersion = findProperty("pluginVersion") as String? ?: defaultPluginVersion
+
+    inputs.property("pluginVersion", pluginVersion)
+
+    filesMatching("META-INF/plugin.xml") {
+        filter<ReplaceTokens>("tokens" to mapOf("snapshot" to pluginVersion))
+    }
+
     from(provider { project(":compiler:cli-common").mainSourceSet.resources }) {
         include("META-INF/extensions/compiler.xml")
     }
@@ -211,35 +206,6 @@ projectTest(parallel = true) {
     workingDir = rootDir
 }
 
-projectTest(taskName = "performanceTest") {
-    dependsOn(":dist")
-    dependsOn(performanceTestRuntime)
-
-    testClassesDirs = sourceSets["performanceTest"].output.classesDirs
-    classpath = performanceTestRuntime + files("${System.getenv("ASYNC_PROFILER_HOME")}/build/async-profiler.jar")
-    workingDir = rootDir
-
-    jvmArgs?.removeAll { it.startsWith("-Xmx") }
-
-    maxHeapSize = "3g"
-    jvmArgs("-Didea.debug.mode=true")
-    jvmArgs("-XX:SoftRefLRUPolicyMSPerMB=50")
-    jvmArgs(
-        "-XX:ReservedCodeCacheSize=240m",
-        "-XX:+UseCompressedOops",
-        "-XX:+UseConcMarkSweepGC"
-    )
-
-    doFirst {
-        systemProperty("idea.home.path", intellijRootDir().canonicalPath)
-        project.findProperty("cacheRedirectorEnabled")?.let {
-            systemProperty("kotlin.test.gradle.import.arguments", "-PcacheRedirectorEnabled=$it")
-        }
-    }
-}
-
-testsJar {
-    from(sourceSets["performanceTest"].output)
-}
-
 configureFormInstrumentation()
+
+testsJar()
